--- a/admin/view/template/setting/store_form.twig
+++ b/admin/view/template/setting/store_form.twig
@@ -66,6 +66,32 @@
                 </div>
               </div>
               <div class="form-group">
+                <label class="col-sm-2 control-label" for="input-meta-title">{{ entry_title_seo_phrase }}</label>
+                <div class="col-sm-10">
+                  {% for language in languages %}
+                  <div class="input-group">
+                    <div class="input-group-addon">
+                      <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
+                    </div>
+                    <input type="text" name="config_title_seo_phrase[{{ language.language_id }}]" value="{{ config_title_seo_phrase[language.language_id] }}" placeholder="{{ entry_heading }}" id="input-heading{{ language.language_id}}" class="form-control" />
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label" for="input-meta-title">{{ entry_heading_seo_phrase }}</label>
+                <div class="col-sm-10">
+                  {% for language in languages %}
+                  <div class="input-group">
+                    <div class="input-group-addon">
+                      <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
+                    </div>
+                    <input type="text" name="config_heading_seo_phrase[{{ language.language_id }}]" value="{{ config_heading_seo_phrase[language.language_id] }}" placeholder="{{ entry_heading }}" id="input-heading{{ language.language_id}}" class="form-control" />
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-meta-description">{{ entry_meta_description }}</label>
                 <div class="col-sm-10">
                   <textarea name="config_meta_description" rows="5" placeholder="{{ entry_meta_description }}" id="input-meta-description" class="form-control">{{ config_meta_description }}</textarea>
@@ -224,6 +250,12 @@
                 <div class="col-sm-10">
                   <select name="config_zone_id" id="input-zone" class="form-control">
                   </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label" for="input-city">{{ entry_city }}</label>
+                <div class="col-sm-10">
+                  <input type="text" name="config_city" value="{{ config_city }}" placeholder="{{ entry_city }}" id="input-city" class="form-control" />
                 </div>
               </div>
               <div class="form-group">
