store module was redisigned

--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -1,3 +1,6 @@
+{% if stores %}
+  {{ stores }}
+{% endif %}
 <footer class="footer">
   <div class="container">
     <div class="columns is-mobile is-multiline">
