--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -1,27 +1,35 @@
 #logo {
   line-height: 0;
 }
+
 #logo img {
-  max-width: 200px;
+  max-width: 175px;
 }
+
 #menu {
   position: sticky;
-  top: -0.5px; /* because of chromium bug */
+  top: -0.5px;
+  /* because of chromium bug */
   z-index: 3;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 7%);
 }
-#menu .navbar-start > .navbar-item:first-child {
-    padding-left: 0;
+
+#menu .navbar-start>.navbar-item:first-child {
+  padding-left: 0;
 }
+
 #menu .icons-menu {
   line-height: 1;
 }
-#menu .icons-menu  > a {
+
+#menu .icons-menu>a {
   padding: 1rem;
   display: block;
   position: relative;
 }
-#menu .not-logged, #menu .logged {
+
+#menu .not-logged,
+#menu .logged {
   display: block;
   position: absolute;
   width: 6px;
@@ -30,6 +38,7 @@
   top: 0.8rem;
   right: 0.8rem;
 }
+
 #menu .icons-menu a .badge {
   position: absolute;
   line-height: 1rem;
@@ -43,80 +52,107 @@
   transition: all 0.2s ease;
   transform: scale(0);
 }
+
 #menu .icons-menu a .badge.shown {
   transform: scale(1);
 }
+
 #menu .catalog-trigger {
   justify-content: flex-start;
 }
+
 .breadcrumb {
   margin-bottom: 0;
   overflow: hidden;
 }
-.breadcrumb ul, .breadcrumb ol {
+
+.breadcrumb ul,
+.breadcrumb ol {
   flex-wrap: initial;
 }
+
+.modal-card {
+  box-shadow: 0 5px 16px 0 rgb(0 0 0 / 30%);
+  border-radius: 12px;
+}
+
 #catalog-modal .modal-content {
   width: 100%;
   max-width: 1344px;
 }
+
 .modal-background {
   background-color: rgb(255 255 255 / 75%);
   backdrop-filter: blur(7px);
 }
-#search-modal .delete, #catalog-modal .delete {
+
+#search-modal .delete,
+#catalog-modal .delete {
   position: fixed;
   right: 1rem;
   top: 1rem;
 }
+
 .search-reset {
   transform: scale(0);
   transition: all 0.2s ease;
 }
+
 .search-reset.shown {
   transform: scale(1);
 }
+
 .contacts-map {
   overflow: hidden;
   border-radius: 14px;
 }
+
 .category-menu {
   border: 1px solid #ededed;
   overflow: hidden;
 }
+
 #login-modal .modal-content {
   min-height: 486px;
   border-radius: 12px;
   box-shadow: 0 5px 10px 0 rgb(0 0 0 / 20%);
   max-width: 400px;
 }
+
 #account-login .login-form {
   max-width: 400px;
   box-shadow: 0 5px 10px 0 rgb(0 0 0 / 20%);
   padding: 1.5rem;
   border-radius: 12px;
 }
+
 .grid .description {
   display: none;
 }
+
 .product-card .image a .stock {
   position: absolute;
   left: 0;
   top: 0;
 }
+
 .product-card .title {
-    height: 2.75rem;
-    overflow: hidden;
+  height: 2.75rem;
+  overflow: hidden;
 }
+
 .product-card .price {
   position: relative;
 }
+
 .product-card .old-price {
   position: absolute;
   top: -1rem;
   display: inline-block;
 }
-.product-card .old-price:after, .product-info .old-price:after {
+
+.product-card .old-price:after,
+.product-info .old-price:after {
   content: "";
   display: block;
   position: absolute;
@@ -125,28 +161,34 @@
   background: #f00;
   top: 50%;
 }
+
 .product-card .actual-price {
   font-size: 1.5rem !important;
   display: block;
 }
+
 .list .product-card {
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
   flex-wrap: wrap;
 }
+
 .list .product-card .image {
   width: 30% !important;
 }
+
 .list .product-card .info {
   width: 70%;
   padding-left: 20px;
 }
+
 .cart-total .box .is-flex span {
   background: #fff;
   z-index: 1;
 }
-.cart-total .box > .block:after {
+
+.cart-total .box>.block:after {
   border-bottom: 1px dotted #ddd;
   content: "";
   display: block;
@@ -154,35 +196,46 @@
   position: relative;
   top: -8px;
 }
-.cart-total .box, #checkout-total  {
+
+.cart-total .box,
+#checkout-total {
   position: sticky;
   top: 80px;
 }
-.cart-total .box > .block:last-child:after {
+
+.cart-total .box>.block:last-child:after {
   content: none;
 }
-.product-info .tabs, #product-images {
+
+.product-info .tabs,
+#product-images {
   position: sticky;
   top: 65px;
   z-index: 2;
 }
+
 .product-info .old-price {
   position: absolute;
   left: 0;
   top: -1rem;
 }
+
 .sticky-crutch {
   position: relative;
   height: 100%;
   z-index: -1;
 }
+
 #product-page .product-images .lSSlideOuter {
   position: sticky;
   top: 65px;
 }
-.product-card, .blog-card {
-    height: 100%;
+
+.product-card,
+.blog-card {
+  height: 100%;
 }
+
 #notifications {
   position: fixed;
   z-index: 999;
@@ -192,26 +245,35 @@
   overflow: visible;
   top: 0.75rem;
 }
+
 #notifications .notification {
   max-width: 400px;
 }
+
 .select:not(.is-multiple):not(.is-loading)::after {
   z-index: 1;
 }
-.select:not(.is-multiple):not(.is-loading)::after, .navbar-link:not(.is-arrowless)::after {
+
+.select:not(.is-multiple):not(.is-loading)::after,
+.navbar-link:not(.is-arrowless)::after {
   border-width: 2px;
 }
+
 .image img {
   width: auto;
   max-width: 100%;
 }
+
 .heading-list li {
   position: relative;
 }
-.heading-list li span, .heading-list li a {
+
+.heading-list li span,
+.heading-list li a {
   z-index: 1;
   position: relative;
 }
+
 .heading-list li:after {
   content: "";
   display: block;
@@ -221,26 +283,44 @@
   bottom: 0.6rem;
   z-index: 0;
 }
-.field.has-addons .control .button:not([disabled]):focus, .field.has-addons .control .button:not([disabled]).is-focused, .field.has-addons .control .button:not([disabled]):active, .field.has-addons .control .button:not([disabled]).is-active, .field.has-addons .control .input:not([disabled]):focus, .field.has-addons .control .input:not([disabled]).is-focused, .field.has-addons .control .input:not([disabled]):active, .field.has-addons .control .input:not([disabled]).is-active, .field.has-addons .control .select select:not([disabled]):focus, .field.has-addons .control .select select:not([disabled]).is-focused, .field.has-addons .control .select select:not([disabled]):active, .field.has-addons .control .select select:not([disabled]).is-active {
+
+.field.has-addons .control .button:not([disabled]):focus,
+.field.has-addons .control .button:not([disabled]).is-focused,
+.field.has-addons .control .button:not([disabled]):active,
+.field.has-addons .control .button:not([disabled]).is-active,
+.field.has-addons .control .input:not([disabled]):focus,
+.field.has-addons .control .input:not([disabled]).is-focused,
+.field.has-addons .control .input:not([disabled]):active,
+.field.has-addons .control .input:not([disabled]).is-active,
+.field.has-addons .control .select select:not([disabled]):focus,
+.field.has-addons .control .select select:not([disabled]).is-focused,
+.field.has-addons .control .select select:not([disabled]):active,
+.field.has-addons .control .select select:not([disabled]).is-active {
   z-index: 1;
 }
+
 .score .tag {
   transition: all 0.2s ease;
 }
-.score .tag:hover, .score .tag.is-active {
+
+.score .tag:hover,
+.score .tag.is-active {
   background: #fc0;
   color: #000;
 }
+
 svg {
   max-width: 100%;
   height: auto;
 }
+
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
-  -webkit-appearance:none;
+  -webkit-appearance: none;
 }
+
 .lSSlideOuter .lSPager.lSpg>li a {
   background-color: rgb(0 0 0 / 30%);
   height: 10px;
@@ -248,29 +328,41 @@ input[type="search"]::-webkit-search-results-decoration {
   z-index: 1;
   transition: all 0.2s ease;
 }
-.lSSlideOuter .lSPager.lSpg > li.active a, .lSSlideOuter .lSPager.lSpg > li:hover a {
+
+.lSSlideOuter .lSPager.lSpg>li.active a,
+.lSSlideOuter .lSPager.lSpg>li:hover a {
   background-color: #0055d4;
   width: 20px;
 }
-.lg-backdrop {background-color: #fff;}
+
+.lg-backdrop {
+  background-color: #fff;
+}
+
 .lg-toolbar {
-    background-color: rgb(0 0 0 / 0%);
+  background-color: rgb(0 0 0 / 0%);
 }
+
 .lg-sub-html {
-    background: #f7f7f7;
-    color: #333;
+  background: #f7f7f7;
+  color: #333;
 }
+
 .lg-toolbar .lg-icon:hover {
-    color: #333;
+  color: #333;
 }
-.lg-actions .lg-next, .lg-actions .lg-prev {
-    background-color: rgb(0 0 0 / 15%);
-    border-radius: 10px;
-    color: #fff;
+
+.lg-actions .lg-next,
+.lg-actions .lg-prev {
+  background-color: rgb(0 0 0 / 15%);
+  border-radius: 10px;
+  color: #fff;
 }
+
 .is-absolute {
   position: absolute !important;
 }
+
 .loading {
   display: flex;
   justify-content: center;
@@ -281,16 +373,19 @@ input[type="search"]::-webkit-search-results-decoration {
   top: 0;
   left: 0;
 }
+
 .spinner {
   display: inline-block;
   position: relative;
   width: 40px;
   height: 40px;
 }
+
 .spinner div {
   transform-origin: 20px 20px;
   animation: spinner 1.2s linear infinite;
 }
+
 .spinner div:after {
   content: " ";
   display: block;
@@ -302,62 +397,77 @@ input[type="search"]::-webkit-search-results-decoration {
   border-radius: 2px;
   background: #0055d4;
 }
+
 .spinner div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -1.1s;
 }
+
 .spinner div:nth-child(2) {
   transform: rotate(30deg);
   animation-delay: -1s;
 }
+
 .spinner div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.9s;
 }
+
 .spinner div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.8s;
 }
+
 .spinner div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.7s;
 }
+
 .spinner div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.6s;
 }
+
 .spinner div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.5s;
 }
+
 .spinner div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.4s;
 }
+
 .spinner div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.3s;
 }
+
 .spinner div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.2s;
 }
+
 .spinner div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.1s;
 }
+
 .spinner div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
 }
+
 @keyframes spinner {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @keyframes rotating {
   from {
     -ms-transform: rotate(0deg);
@@ -366,6 +476,7 @@ input[type="search"]::-webkit-search-results-decoration {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   to {
     -ms-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -374,65 +485,83 @@ input[type="search"]::-webkit-search-results-decoration {
     transform: rotate(360deg);
   }
 }
+
 @keyframes rotatedshake {
   3% {
     transform: rotate(15deg);
   }
+
   6% {
     transform: rotate(-15deg);
   }
+
   9% {
     transform: rotate(15deg);
   }
+
   12% {
     transform: rotate(-15deg);
   }
+
   15% {
     transform: rotate(15deg);
   }
+
   18% {
     transform: rotate(-15deg);
   }
+
   21% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
 }
+
 #agree-modal .modal-content {
   width: 100%;
   max-width: 1344px;
   padding: 30px;
 }
+
 #agree-modal .delete {
   top: 1rem;
   right: 1rem;
 }
+
 .basic-captcha img {
   border-radius: 8px;
 }
+
 .slider-hidden {
   height: 1px;
   opacity: 0;
   filter: alpha(opacity=0);
   overflow: hidden;
 }
+
 .slideshow0 {
-    padding-top: 1rem;
+  padding-top: 1rem;
 }
+
 .slideshow-item img {
-    border-radius: 10px;
+  border-radius: 10px;
 }
+
 .telegram svg {
   color: #0088cc;
 }
+
 .vk svg {
   color: #0077FF;
 }
+
 .youtube svg {
   color: #ff0000;
 }
+
 .mobile-contacts {
   position: fixed;
   bottom: 2rem;
@@ -441,9 +570,11 @@ input[type="search"]::-webkit-search-results-decoration {
   transition: all 0.4s ease;
   z-index: 1;
 }
+
 .mobile-contacts.shown {
   transform: translateX(-5rem);
 }
+
 .mobile-contacts .mobile-contacts-trigger {
   line-height: 1;
   border: none;
@@ -452,11 +583,13 @@ input[type="search"]::-webkit-search-results-decoration {
   border-radius: 36px;
   padding: 12px;
   transition: all 0.2s ease;
-  animation: rotatedshake 4s cubic-bezier(.36,.07,.19,.97) infinite;
+  animation: rotatedshake 4s cubic-bezier(.36, .07, .19, .97) infinite;
 }
+
 .mobile-contacts .mobile-contacts-trigger.shown {
   animation: none;
 }
+
 .mobile-contacts-list {
   position: absolute;
   bottom: calc(100% + 5px);
@@ -468,15 +601,18 @@ input[type="search"]::-webkit-search-results-decoration {
   right: -10rem;
   padding: 5px 0;
 }
+
 .mobile-contacts-list.shown {
   transform: translateX(-10rem);
 }
-.mobile-contacts-list > a {
+
+.mobile-contacts-list>a {
   display: block;
   width: 36px;
   height: 36px;
   margin: 4px auto;
 }
+
 footer .scroll-top-trigger {
   position: fixed;
   width: 36px;
@@ -488,22 +624,27 @@ footer .scroll-top-trigger {
   backdrop-filter: blur(5px);
   transition: all 0.4s ease;
 }
+
 footer .scroll-top-trigger.shown {
   transform: translateY(-5rem);
 }
+
 @media (max-width: 1023px) {
-  .container > .columns {
+  .container>.columns {
     margin-left: 0;
     margin-right: 0;
   }
+
   .breadcrumb.py-4 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
     overflow: scroll;
   }
+
   .breadcrumb ul {
     flex-wrap: initial;
   }
+
   #menu {
     position: fixed;
     width: 100%;
@@ -511,12 +652,15 @@ footer .scroll-top-trigger.shown {
     top: 100%;
     left: 0;
   }
+
   #menu.shown {
     top: 0;
   }
+
   #menu .navbar-menu {
     display: block;
   }
+
   .icons-menu {
     position: fixed;
     bottom: 0;
@@ -527,46 +671,58 @@ footer .scroll-top-trigger.shown {
     justify-content: center !important;
     box-shadow: 0 0 5px 0 rgb(0 0 0 / 15%);
   }
+
   .slideshow0 {
-      padding-top: 0;
+    padding-top: 0;
   }
+
   .slideshow-item img {
-      border-radius: 0;
+    border-radius: 0;
   }
-  .product-info .tabs, #product-images {
-    top:0.75rem;
+
+  .product-info .tabs,
+  #product-images {
+    top: 0.75rem;
   }
+
   .footer {
     padding: 3rem 0rem 6rem;
   }
+
   #filter {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      background: #fff;
-      z-index: 3;
-      display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    z-index: 3;
+    display: none;
   }
+
   #filter.shown {
-      display: block;
+    display: block;
   }
+
   #filter .filter-trigger {
     position: fixed;
     top: 1.5rem;
     right: 1.5rem;
   }
+
   .mobile-contacts {
     bottom: 5rem;
   }
+
   footer .scroll-top-trigger.shown {
     transform: translateY(-8rem);
   }
+
   .mobile-contacts.shown {
     transform: translateX(-4rem);
   }
 }
+
 @media (max-width: 768px) {
   #catalog-modal .modal-content {
     top: 0;
@@ -577,24 +733,31 @@ footer .scroll-top-trigger.shown {
     margin-top: 0 !important;
     padding: 0;
   }
-  #search-modal .delete, #catalog-modal .delete {
+
+  #search-modal .delete,
+  #catalog-modal .delete {
     top: initial;
     right: initial;
     bottom: 1rem;
   }
+
   #menu .navbar-menu {
     display: block;
   }
+
   #menu .catalog-trigger {
     margin: 0 !important;
   }
+
   #menu.shown .catalog-trigger {
     padding-left: 0.75rem !important;
   }
+
   #cart-modal .modal-card {
     height: 100%;
     max-height: 100%;
   }
+
   #cart-modal .delete {
     position: fixed;
     top: initial;
@@ -602,27 +765,40 @@ footer .scroll-top-trigger.shown {
     bottom: 1.5rem;
     z-index: 1;
   }
-  .product-cards .column, .blog-cards .column {
+
+  .product-cards .column,
+  .blog-cards .column {
     padding-top: 0;
   }
+
   .product-info .tabs {
     top: 0.75rem;
   }
+
   .mobile-menu-trigger.shown {
     transform: rotate(90deg);
   }
 }
+
 @media (max-width: 640px) {
   .title.is-1 {
     font-size: 2rem;
   }
+
   .title.is-2 {
     font-size: 1.8rem;
   }
+
   .title.is-3 {
     font-size: 1.6rem;
   }
+
   .title.is-4 {
     font-size: 1.4rem;
+  }
+
+  .modal-card {
+    max-height: 100%;
+    height: 100%;
   }
 }
