--- a/catalog/view/theme/default/template/extension/module/store.twig
+++ b/catalog/view/theme/default/template/extension/module/store.twig
@@ -1,9 +1,55 @@
-<div class="panel panel-default">
-  <div class="panel-heading">{{ heading_title }}</div>
-  <p style="text-align: center;">{{ text_store }}</p>
-  {% for store in stores %}
-  {% if store.store_id == store_id %}<a href="{{ store.url }}"><b>{{ store.name }}</b></a><br />
-  {% else %}<a href="{{ store.url }}">{{ store.name }}</a><br />
-  {% endif %}
-  {% endfor %}<br />
+<div class="modal" id="stores-modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <div class="modal-card-head">
+      <p class="modal-card-title">{{ heading_title }}</p>
+    </div>
+    <div class="modal-card-body">
+      <div class="columns is-multiline is-variable is-2">
+        {% for store in stores %}
+        {% if store.store_id == store_id %}
+        <div class="column is-6-desktop is-6-tablet is-12-mobile">
+          <a class="box is-active" href="{{ store.url }}">
+            <span class="icon-text">
+              <span class="icon has-text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+              </span>
+              <span class="text has-text-weight-bold has-text-primary">{{ store.city }}</span>
+            </span>
+          </a>
+        </div>
+        {% else %}
+        <div class="column is-6-desktop is-6-tablet is-12-mobile">
+          <a class="box" href="{{ store.url }}">
+            <span class="icon-text">
+              <span class="icon has-text-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+              </span>
+              <span class="text">{{ store.city }}</span>
+            </span>
+          </a>
+        </div>
+        {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+    <div class="modal-card-foot">
+      <div class="buttons">
+        <button class="button is-primary is-outlined">Отмена</button>
+      </div>
+    </div>
+  </div>
 </div>
+<script>
+  $(document).ready(function() {
+    $('#stores, #stores-modal .modal-background, #stores-modal .modal-card-foot button').on('click', function() {
+      $('#stores-modal').toggleClass('is-active');
+    });
+  });
+</script>
