--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -622,6 +622,7 @@ footer .scroll-top-trigger {
   left: calc(50% - 18px);
   border-radius: 24px;
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   transition: all 0.4s ease;
 }
 
