--- a/catalog/view/theme/default/template/information/contact.twig
+++ b/catalog/view/theme/default/template/information/contact.twig
@@ -30,6 +30,40 @@
           <div class="column">
             <div class="title is-4 has-text-grey">{{ text_location }}</div>
             <div class="block">
+              {% if telephone %}
+              <a class="is-block mb-3" href="tel:{{ telephone }}" rel="nofollow">
+                <span class="icon-text">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold">{{ telephone }}</span>
+                </span>
+              </a>
+              {% endif %}
+              {% if email_address %}
+              <a class="is-block mb-3" href="mailto:{{ email_address }}" rel="nofollow">
+                <span class="icon-text">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold">{{ email_address }}</span>
+                </span>
+              </a>
+              {% endif %}
+              {% if social_media %}
+                {% for item in social_media %}
+                {% if item.contact %}
+                <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} mr-4">
+                  <span class="icon">{{ item.icon|html_entity_decode }}</span>
+                </a>
+                {% endif %}
+                {% endfor %}
+                {% endif %}
+              <hr>
               <p class="mb-5">
                 <span class="icon-text">
                   <span class="icon has-text-primary">
@@ -65,31 +99,6 @@
                   <span>{{ open }}</span>
                 </span>
               </p>
-              {% endif %}
-              <hr>
-              {% if telephone %}
-              <a class="is-block mb-3" href="tel:{{ telephone }}" rel="nofollow">
-                <span class="icon-text">
-                  <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                    </svg>
-                  </span>
-                  <span class="has-text-weight-bold">{{ telephone }}</span>
-                </span>
-              </a>
-              {% endif %}
-              {% if email_address %}
-              <a class="is-block mb-3" href="mailto:{{ email_address }}" rel="nofollow">
-                <span class="icon-text">
-                  <span class="icon has-text-primary">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                    </svg>
-                  </span>
-                  <span class="has-text-weight-bold">{{ email_address }}</span>
-                </span>
-              </a>
               {% endif %}
             </div>
           </div>
@@ -142,6 +151,7 @@
           </div>
         </div>
         {% if locations %}
+        <hr />
         <div class="columns is-multiline mb-5">
           <div class="column is-12">
             <div class="title is-3">{{ text_store }}</div>
