--- a/catalog/view/theme/default/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/default/template/product/manufacturer_info.twig
@@ -135,26 +135,26 @@
           {% endif %}
           {% for product in products %}
           <div class="{{ class }}">
-            <div class="box product-card">
+            <div class="product-card box">
               <div class="image">
                 <a href="{{ product.href }}" class="is-flex is-justify-content-center">
                   <img src="{{ product.thumb }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
                   <span class="tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light stock">{{ product.stock }}</span>
                 </a>
               </div>
-              <div class="info">
-                <a class="is-block title is-5 my-3 has-text-link" href="{{ product.href }}">{{ product.name }}</a>
+              <div class="caption">
+                <a class="product-name is-block is-size-6 my-3" href="{{ product.href }}">{{ product.name }}</a>
                 <div class="is-flex is-justify-content-space-between is-align-items-center">
                   {% if product.price %}
-                  <div class="is-block my-3 price">
+                  <div class="price is-block my-3">
                     {% if not product.special %}
                     <span class="actual-price">{{ product.price }}</span>
                     {% else %}
                     <span class="actual-price">{{ product.special }}</span>
-                    <span class="has-text-grey old-price">{{ product.price }}</span>
+                    <span class="old-price has-text-grey">{{ product.price }}</span>
                     {% endif %}
                     {% if product.tax %}
-                    <span class="has-text-grey is-size-7 price-tax">{{ text_tax }} {{ product.tax }}</span>
+                    <span class="price-tax has-text-grey is-size-7">{{ text_tax }} {{ product.tax }}</span>
                     {% endif %}
                   </div>
                   {% endif %}
@@ -171,24 +171,26 @@
                   </span>
                   {% endif %}
                 </div>
-                <div class="buttons">
-                  <button type="button" class="button is-primary is-outlined add-to-cart" data-product_id="{{ product.product_id }}" data-minimum="{{ product.minimum }}">
+                <div class="actions is-flex is-justify-content-space-between">
+                  <button type="button" class="add-to-cart button is-primary is-light" data-product_id="{{ product.product_id }}" data-minimum="{{ product.minimum }}">
                     {{ button_cart }}
                   </button>
-                  <button type="button" class="button is-primary is-outlined add-to-wishlist" title="{{ button_wishlist }}" data-product_id="{{ product.product_id }}">
-                    <span class="icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                      </svg>
-                    </span>
-                  </button>
-                  <button type="button" class="button is-primary is-outlined add-to-compare" title="{{ button_compare }}" data-product_id="{{ product.product_id }}">
-                    <span class="icon">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                        <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
-                      </svg>
-                    </span>
-                  </button>
+                  <div>
+                    <button type="button" class="add-to-wishlist button is-primary is-light" title="{{ button_wishlist }}" data-product_id="{{ product.product_id }}">
+                      <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                          <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                        </svg>
+                      </span>
+                    </button>
+                    <button type="button" class="add-to-compare button is-primary is-light" title="{{ button_compare }}" data-product_id="{{ product.product_id }}">
+                      <span class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+                          <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
+                        </svg>
+                      </span>
+                    </button>
+                  </div>
                 </div>
               </div>
               <div class="description mt-5">
