--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -178,7 +178,7 @@
   width: 30% !important;
 }
 
-.list .product-card .info {
+.list .product-card .caption {
   width: 70%;
   padding-left: 20px;
 }
