--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -41,7 +41,7 @@
         {% if products %}
         <div class="is-flex is-justify-content-space-between is-align-items-center category-toolbar">
           <div class="block mb-0">
-            <button type="button" id="filter-trigger" class="filter-trigger button is-primary is-outlined is-hidden-desktop">
+            <button type="button" class="filter-trigger button is-primary is-outlined is-hidden">
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                   <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
