--- a/catalog/view/theme/default/template/extension/module/filter.twig
+++ b/catalog/view/theme/default/template/extension/module/filter.twig
@@ -34,7 +34,8 @@
 <script>
 
 $(document).ready(function () {
-  if($('.filter-trigger').length && $('#filter').length) {
+  if($('.filter-trigger').length && $('#filter').length) {    
+    
     $('.filter-trigger').on('click', function () {
       $(this).toggleClass('shown');
       $('#filter').toggleClass('shown');
@@ -42,8 +43,16 @@ $(document).ready(function () {
   }
 });
 
+$(window).on('load resize', function() {
+  if($('.filter-trigger').length && $(window).width() < 769) {
+    $('.filter-trigger').removeClass('is-hidden');
+  } else {
+    $('.filter-trigger').addClass('is-hidden');
+  }
+});
+
 $('#button-filter').on('click', function() {
-  filter = [];
+  let filter = [];
 
   $('input[name^="filter"]:checked').each(function(element) {
     filter.push(this.value);
