--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -315,19 +315,19 @@
                           </a>
                         </p>
                         <p class="control">
-                          <button id="button-cart" class="button is-primary is-outlined" name="button">{{ button_cart }}</button>
+                          <button id="button-cart" class="button is-primary" name="button">{{ button_cart }}</button>
                         </p>
                       </div>
                       <input type="hidden" name="product_id" value="{{ product_id }}" />
                       <div class="buttons is-right">
-                        <button type="button" class="button is-primary is-outlined add-to-wishlist" title="{{ button_wishlist }}" data-product_id="{{ product_id }}">
+                        <button type="button" class="add-to-wishlist button is-primary is-light" title="{{ button_wishlist }}" data-product_id="{{ product_id }}">
                           <span class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                               <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                             </svg>
                           </span>
                         </button>
-                        <button type="button" class="button is-primary is-outlined add-to-compare" title="{{ button_compare }}" data-product_id="{{ product_id }}">
+                        <button type="button" class="add-to-compare button is-primary is-light" title="{{ button_compare }}" data-product_id="{{ product_id }}">
                           <span class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                               <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
@@ -581,7 +581,7 @@ $('body').on('click', '.tabs.is-toggle li', function () {
     $(this).siblings().removeClass('is-active');
     $(this).addClass('is-active');
 
-    let offset = $(window).width() > 768 ? 70 : 45;
+    let offset = $(window).width() > 768 ? 120 : 60;
     let top = $($(this).data('target')).offset().top;
 
     $('html, body').stop().animate({scrollTop: top - offset}, 300);
