privacy notification module was implemented

--- a/catalog/view/theme/default/bulma/dynamic.scss
+++ b/catalog/view/theme/default/bulma/dynamic.scss
@@ -27,7 +27,7 @@ $title-color: $black;
 $gap: 32px;
 $container-max-width: 1408px;
 
-$primary: $blue;
+$primary: $purple;
 $warning: $yellow;
 $link: $blue;
 $success: $green;
