--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -1,6 +1,9 @@
 {% if stores %}
   {{ stores }}
 {% endif %}
+{% if privacy %}
+  {{ privacy }}
+{% endif %}
 <footer class="footer">
   <div class="container">
     <div class="columns is-mobile is-multiline">
