--- a/catalog/view/theme/default/template/extension/module/privacy.twig
+++ b/catalog/view/theme/default/template/extension/module/privacy.twig
@@ -1,7 +1,7 @@
 <div class="privacy p-5 has-background-white is-hidden">
-  <div class="columns is-multiline is-aling-items-center">
+  <div class="columns is-multiline is-align-items-center">
     <div class="column">
-      {{ content[language_id].text}} <a target="_blank" href="{{ url }}">{{ title }}</a>
+      {{ content[language_id].text}} <a class="agree" href="{{ url }}">{{ title }}</a>
     </div>
     <div class="column is-narrow">
       <button type="button" class="button is-primary is-light">{{ content[language_id].button}}</button>
