--- a/catalog/view/theme/default/template/extension/module/anycategories.twig
+++ b/catalog/view/theme/default/template/extension/module/anycategories.twig
@@ -10,7 +10,7 @@
           <span class="image">
             <img loading="lazy" height="{{ image_height }}px" width="{{ image_width }}px" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
           </span>
-          <span class="title is-5 is-block mt-5 has-text-link">{{ category.name }}</span>
+          <span class="title is-size-5-desktop is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
         </a>
       </div>
       {% endfor %}
