--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -814,6 +814,11 @@ footer .scroll-top-trigger.shown {
 }
 
 @media (max-width: 640px) {
+  .modal-content {
+    max-height: 100%;
+    height: 100%;
+  }
+
   .title.is-1 {
     font-size: 2rem;
   }
