--- a/admin/view/template/catalog/review_form.twig
+++ b/admin/view/template/catalog/review_form.twig
@@ -48,7 +48,14 @@
               <textarea name="text" cols="60" rows="8" placeholder="{{ entry_text }}" id="input-text" class="form-control">{{ text }}</textarea>
               {% if error_text %}
               <div class="text-danger">{{ error_text }}</div>
-              {% endif %} </div>
+              {% endif %}
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-reply">{{ entry_reply }}</label>
+            <div class="col-sm-10">
+              <textarea name="reply" rows="5" placeholder="{{ entry_reply }}" id="input-reply" class="form-control">{{ reply }}</textarea>
+            </div>
           </div>
           <div class="form-group required">
             <label class="col-sm-2 control-label" for="input-name">{{ entry_rating }}</label>
