--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -475,7 +475,8 @@
                     <input type="text" name="config_limit_admin" value="{{ config_limit_admin }}" placeholder="{{ entry_limit_admin }}" id="input-admin-limit" class="form-control" />
                     {% if error_limit_admin %}
                     <div class="text-danger">{{ error_limit_admin }}</div>
-                    {% endif %} </div>
+                    {% endif %}
+                  </div>
                 </div>
                 <div class="form-group required">
                   <label class="col-sm-2 control-label" for="input-autocomplete-limit"><span data-toggle="tooltip" title="{{ help_limit_autocomplete }}">{{ entry_limit_autocomplete }}</span></label>
@@ -1166,6 +1167,15 @@
                 <label class="col-sm-2 control-label" for="input-logo">{{ entry_logo }}</label>
                 <div class="col-sm-10"><a href="" id="thumb-logo" data-toggle="image" class="img-thumbnail"><img src="{{ logo }}" alt="" title="" data-placeholder="{{ placeholder }}" /></a>
                   <input type="hidden" name="config_logo" value="{{ config_logo }}" id="input-logo" />
+                </div>
+              </div>
+              <div class="form-group required">
+                <label class="col-sm-2 control-label" for="input-logo-width"><span data-toggle="tooltip" title="{{ help_logo_size }}">{{ entry_logo_size }}</span></label>
+                <div class="col-sm-2">
+                  <input type="text" name="config_logo_width" value="{{ config_logo_width }}" placeholder="{{ entry_logo_width }}" id="input-logo-width" class="form-control" />
+                </div>
+                <div class="col-sm-2">
+                  <input type="text" name="config_logo_height" value="{{ config_logo_height }}" placeholder="{{ entry_logo_height }}" id="input-logo-height" class="form-control" />
                 </div>
               </div>
               <div class="form-group">
