--- a/admin/view/template/setting/store_form.twig
+++ b/admin/view/template/setting/store_form.twig
@@ -561,6 +561,15 @@
                   <input type="hidden" name="config_logo" value="{{ config_logo }}" id="input-logo" />
                 </div>
               </div>
+              <div class="form-group required">
+                <label class="col-sm-2 control-label" for="input-logo-width"><span data-toggle="tooltip" title="{{ help_logo_size }}">{{ entry_logo_size }}</span></label>
+                <div class="col-sm-2">
+                  <input type="text" name="config_logo_width" value="{{ config_logo_width }}" placeholder="{{ entry_logo_width }}" id="input-logo-width" class="form-control" />
+                </div>
+                <div class="col-sm-2">
+                  <input type="text" name="config_logo_height" value="{{ config_logo_height }}" placeholder="{{ entry_logo_height }}" id="input-logo-height" class="form-control" />
+                </div>
+              </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-icon"><span data-toggle="tooltip" title="{{ help_icon }}">{{ entry_icon }}</span></label>
                 <div class="col-sm-10"><a href="" id="thumb-icon" data-toggle="image" class="img-thumbnail"><img src="{{ icon }}" alt="" title="" data-placeholder="{{ placeholder }}" /></a>
