content auto height was removed

--- a/catalog/view/theme/default/bulma/dynamic.scss
+++ b/catalog/view/theme/default/bulma/dynamic.scss
@@ -22,7 +22,7 @@ $title-color: $black;
 $gap: 32px;
 $container-max-width: 1408px;
 
-$primary: $blue;
+$primary: $red;
 $warning: $yellow;
 $link: $blue;
 $success: $green;
